--- a/packages/SystemUI/res/values/cm_dimens.xml
+++ b/packages/SystemUI/res/values/cm_dimens.xml
@@ -27,6 +27,9 @@
     <dimen name="queue_row_height">52dp</dimen>
     <dimen name="queue_top_shadow">3dp</dimen>
 
+    <!-- Floating action button -->
+    <dimen name="floating_action_button_translation_z">12dp</dimen>
+
     <!-- Network traffic monitor single-line text size -->
     <dimen name="net_traffic_single_text_size">10dp</dimen>
 
