--- a/core/res/res/values/fh_strings.xml
+++ b/core/res/res/values/fh_strings.xml
@@ -25,4 +25,10 @@
     <!-- Screen record -->
     <string name="global_action_screenrecord">Screenrecord</string>
 
+    <!-- [CHAR LIMIT=NONE] Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_resetBatteryStats">Reset Battery Statistics</string>
+
+    <!-- [CHAR LIMIT=NONE] Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_resetBatteryStats">Allows an application to reset the current low-level battery use data.</string>
+
 </resources>
