Added a toast to screenshot delete, why not right?
http://i.imgur.com/vhVqXlv.jpg

Change-Id: Ica904e3e0c53cc257afbcb6c4ee90894bea3a4ec
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>
Signed-off by: Prathamesh Sahasrabuddhe <pratham220399@gmail.com>

--- a/packages/SystemUI/res/values/fh_strings.xml
+++ b/packages/SystemUI/res/values/fh_strings.xml
@@ -259,6 +259,9 @@
     <!-- CellularTile data sim not configured state string -->
     <string name="data_sim_not_configured">No data SIM</string>
 
+    <!-- Screenshot delete toast -->
+    <string name="delete_screenshot_toast">Screenshot Deleted</string>
+
     <!-- Content description of the dock battery level icon for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_dock_battery_level">Dock battery <xliff:g id="number">%d</xliff:g> percent.</string>
 
