fwb: Recents Clear All Button Tweaks and Add FAB to Recents Panel
--Clear all button positions
--Make Native Clear all TextView Dissapear when FAB enabled

Signed-off-by: Varun Date <date.varun123@gmail.com>
Signed-off-by: PMS22 <prathams99@rediff.com>

--- a/packages/SystemUI/res/values/cm_colors.xml
+++ b/packages/SystemUI/res/values/cm_colors.xml
@@ -22,4 +22,11 @@
 
     <!-- Status bar battery level text color -->
     <color name="status_bar_battery_level_text_color">#ffffff</color>
+
+    <!-- Floating action button -->
+    <color name="fab_color">#ff009688</color>
+    <color name="floating_action_button_icon_color">#ffffff</color>
+
+    <!-- Color for the RAM bar text in the recent view -->
+    <color name="ram_bar_text">#FFFFFFFF</color>
 </resources>
