--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -105,7 +105,7 @@
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
     <string name="quick_settings_tiles_stock" translatable="false">
-        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,hotspot,inversion,saver,work,cast,night,expanded_desktop,screenshot,adb_network,sync,reboot,usb_tether,music,ime,caffeine,nfc,lte,navigation_bar,heads_up
+        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,hotspot,inversion,saver,work,cast,night,expanded_desktop,screenshot,adb_network,sync,reboot,usb_tether,music,ime,caffeine,nfc,lte,navigation_bar,heads_up,weather
     </string>
 
     <!-- The tiles to display in QuickSettings -->
@@ -226,7 +226,6 @@
     <!-- Doze: a list of pickup sensor subtypes that perform a proximity check before they trigger.
                If not empty, either * or !* must appear to specify the default.
                If empty, falls back to doze_pickup_performs_proximity_check.
-
                Examples: 1,2,3,!* -> subtypes 1,2 and 3 perform the check, all others don't.
                          !1,!2,*  -> subtypes 1 and 2 don't perform the check, all others do.
                          !8,*     -> subtype 8 does not perform the check, all others do
