SystemUI: Slim Recents [1/2]
* Credits to SlimRoms, maxwen, kufikugel
* Thanks to ezio for new fixes

Change-Id: I679b16ffc094258d46b91cf81baa0b843c563fb2
Signed-off-by: PMS22 <prathams99@rediff.com>

--- a/core/res/res/values/fh_config.xml
+++ b/core/res/res/values/fh_config.xml
@@ -18,10 +18,14 @@
 
     <!-- Default value for led color when battery is really fully charged -->
     <integer name="config_notificationsBatteryReallyFullARGB">0xFF00FF00</integer>
-
-    <!-- OH Mode -->
-    <bool name="single_hand_mode">true</bool>
-  
+ 
     <!-- If this is true, key chords can be used to take a screen record on the device. -->
     <bool name="config_enableScreenrecordChord">true</bool>
+
+    <!-- The duration (in milliseconds) of recent app screen animation. -->
+    <integer name="config_recentDefaultDur">300</integer>
+
+    <!-- The duration (in milliseconds) of recent app screen exit animation. -->
+    <integer name="config_recentExitDur">450</integer>
+
 </resources>
