--- a/packages/SystemUI/res/values/fh_strings.xml
+++ b/packages/SystemUI/res/values/fh_strings.xml
@@ -94,4 +94,8 @@
     <!-- Screenshot delete toast -->
     <string name="delete_screenshot_toast">Screenshot Deleted</string>
 
+    <!-- Slim recents -->
+    <string name="slim_recent_keyguard">Unlock your device to view recents</string>
+    <string name="recents_multiwin_warning">A multiwindow session is already active.\nJust tap an app if you want to dock it now.</string>
+
 </resources>
