--- a/core/res/res/values/fh_styles.xml
+++ b/core/res/res/values/fh_styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2017 FireHound
+     Copyright (C) 2017 FireHound ROMs
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -11,16 +11,19 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources>
 
-    <!-- Advanced Location tile mode -->
-    <string-array name="location_mode_entries" translatable="false">
-        <item>@string/quick_settings_location_battery_saving_label</item>
-        <item>@string/quick_settings_location_gps_only_label</item>
-        <item>@string/quick_settings_location_high_accuracy_label</item>
-    </string-array>
+    <!-- Slim recent app screen animation -->
+    <style name="Animation" />
 
-    <!-- Default value how much apps show the app screenshot on recents view entry -->
-    <integer name="expanded_items_default">3</integer>
+    <style name="Animation.RecentScreen">
+        <item name="android:windowEnterAnimation">@anim/recent_screen_enter</item>
+        <item name="android:windowExitAnimation">@anim/recent_screen_exit</item>
+    </style>
+
+    <style name="Animation.RecentScreen.Left">
+        <item name="android:windowEnterAnimation">@anim/recent_screen_enter_left</item>
+        <item name="android:windowExitAnimation">@anim/recent_screen_exit_left</item>
+    </style>
 
 </resources>
