--- a/core/res/res/values/fh_symbols.xml
+++ b/core/res/res/values/fh_symbols.xml
@@ -42,24 +42,18 @@
     <!-- Notifications Battery Really Full -->
     <java-symbol type="integer" name="config_notificationsBatteryReallyFullARGB" />
 
-    <!-- OH Mode -->
-    <java-symbol type="id" name="relative_top" />
-    <java-symbol type="id" name="hint_info" />
-    <java-symbol type="id" name="single_hand_window_title" />
-    <java-symbol type="id" name="click_hint" />
-    <java-symbol type="id" name="hint_section" />
-    <java-symbol type="id" name="relative_bottom" />
-    <java-symbol type="id" name="singlehandmode_slide_hint_text" />
-    <java-symbol type="id" name="slide_hint" />
-    <java-symbol type="id" name="slide_hint_area" />
-    <java-symbol type="bool" name="single_hand_mode" />
-    <java-symbol type="string" name="singlehandmode_click_hint_message" />
-    <java-symbol type="string" name="singlehandmode_slide_hint_message" />
-    <java-symbol type="layout" name="single_hand_window" />
-
     <!-- Screenrecord -->
     <java-symbol type="bool" name="config_enableScreenrecordChord" />
     <java-symbol type="drawable" name="ic_lock_screenrecord" />
     <java-symbol type="string" name="global_action_screenrecord" />
+
+    <!-- Slim recent app screen-->
+    <java-symbol type="integer" name="config_recentDefaultDur" />
+    <java-symbol type="integer" name="config_recentExitDur" />
+    <java-symbol type="style" name="Animation.RecentScreen" />
+    <java-symbol type="style" name="Animation.RecentScreen.Left" />
+    <java-symbol type="anim" name="recent_screen_enter" />
+    <java-symbol type="anim" name="recent_screen_enter_left" />
+    <java-symbol type="anim" name="recent_screen_fade_out" />
 
 </resources>
