--- a/packages/SystemUI/res/values-land/fh_config.xml
+++ b/packages/SystemUI/res/values-land/fh_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2017 FireHound
+     Copyright (C) 2017 FireHound ROM
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -11,16 +11,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-
-    <!-- Advanced Location tile mode -->
-    <string-array name="location_mode_entries" translatable="false">
-        <item>@string/quick_settings_location_battery_saving_label</item>
-        <item>@string/quick_settings_location_gps_only_label</item>
-        <item>@string/quick_settings_location_high_accuracy_label</item>
-    </string-array>
+<!-- These resources are around just to allow their values to be customized
+     for different hardware and product builds. -->
+<resources>
 
     <!-- Default value how much apps show the app screenshot on recents view entry -->
-    <integer name="expanded_items_default">3</integer>
+    <integer name="expanded_items_default">1</integer>
 
 </resources>
