[QUICK SETTINGS]: Add Greenify Tile
- Long click will launch app
- Single click will hibernate selected apps
- Display a informative toast when greenify not installed

Change-Id: I209ea1c192e17fba1010a6146e9fe3a530e8790d
Signed-off-by: PMS22 <prathams99@rediff.com>

--- a/packages/SystemUI/res/values/fh_strings.xml
+++ b/packages/SystemUI/res/values/fh_strings.xml
@@ -105,4 +105,10 @@
     <string name="omnijaws_detail_header">Weather</string>
     <string name="omnijaws_label_default">Weather</string>
     <string name="omnijaws_current_text">Now</string>
+
+    <!-- Greenify -->
+    <string name="quick_settings_greenify">Greenify</string>
+    <string name="greenified_apps">Selected apps hibernated</string>
+    <string name="greenify_not_installed">Greenify not installed! Please install Greenify</string>
+
 </resources>
