fwb: Seperate statusbar from tuner and launch externally
xyyx: Adapted for O and replaced style
ezio84: SystemUI tuner activities: fix SysUI fc on rotation
Signed-off-by: PMS22 <prathams99@rediff.com>

--- a/packages/SystemUI/res/values/fh_strings.xml
+++ b/packages/SystemUI/res/values/fh_strings.xml
@@ -27,4 +27,7 @@
     <!-- Screenshot Delete Toast -->
     <string name="delete_screenshot_toast">Screenshot Deleted</string>
 
+    <!-- Statusbar tuner -->
+    <string name="statusbar_items_title">Statusbar Icons</string>
+
 </resources>
