--- a/packages/SystemUI/res/values/fh_strings.xml
+++ b/packages/SystemUI/res/values/fh_strings.xml
@@ -30,4 +30,8 @@
     <!-- Statusbar tuner -->
     <string name="statusbar_items_title">Statusbar Icons</string>
 
+    <!-- Tuner shortcuts -->
+    <string name="lockscreen_default">Default</string>
+    <string name="lockscreen_hidden">None</string>
+
 </resources>
